# RayTracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Source/: CMakeLists.txt  Canvas.ixx  Intersection.ixx  Material.ixx  Matrix.ixx  Object.ixx  PointLight.ixx  Ray.ixx  RayTracer.ixx  Shape.ixx  Sphere.ixx  Tuple.ixx  World.ixx  main.cpp  main.cxx  main.ixx
Source/Maths/: FloatHelper.ixx  Intersection.ixx  Matrix.ixx  Ray.ixx  Sphere.ixx  Tuple.h  Tuple.ixx
Source/Rendering/: Camera.ixx  Canvas.ixx  Material.ixx  Pattern.ixx  PointLight.ixx  World.ixx
Source/Shapes/: Plane.ixx  Shape.ixx  Sphere.ixx
Tests/: CMakeLists.txt  IntersectionTest.cpp  LightTest.cpp  MaterialTest.cpp  RayTest.cpp  SphereTest.cpp  WorldTest.cpp
Tests/Maths/: CanvasTest.cpp  MatrixTest.cpp  RayTest.cpp  TransformationTest.cpp  TupleTest.cpp
Tests/Rendering/: CameraTest.cpp  MaterialTest.cpp  PatternTest.cpp  WorldTest.cpp
Tests/Shapes/: PlaneTest.cpp  SphereTest.cpp
